assets/css/main.css
:root {
	--font-family: 'Atkinson Hyperlegible', sans-serif;
	--font-family-code: 'Source Code Pro', monospace;
	--color-dark: #2e303e;
	--color-primary-dark: #18737b;
	--color-primary-light: #25b0bc;
	--color-accent-dark: #94195d;
	--color-accent-light: #ee9fcb;
	--color-light: #ebeeef;
	--height-header: 56px;
	--height-header-offset: calc(var(--height-header) + 10px);

	/* Used for syntax highlighting */
	--color-red-light: #e95678;
	--color-orange-light: #fab795;
	--color-yellow-light: #fbe6bc;
	--color-green-light: #29d398;
	--color-blue-light: #26bbd9;
	--color-purple-light: #b877db;
	--color-grey-light: #b9c3c6;

	--color-red-dark: #991433;
	--color-orange-dark: #883206;
	--color-yellow-dark: #6a4906;
	--color-green-dark: #125940;
	--color-blue-dark: #125663;
	--color-purple-dark: #722999;
	--color-grey-dark: #4a4b64;
}

.light {
	--color-font: var(--color-dark);
	--color-bg: var(--color-light);
	--color-primary: var(--color-primary-dark);
	--color-accent: var(--color-accent-dark);

	--color-red: var(--color-red-dark);
	--color-orange: var(--color-orange-dark);
	--color-yellow: var(--color-yellow-dark);
	--color-green: var(--color-green-dark);
	--color-blue: var(--color-blue-dark);
	--color-purple: var(--color-purple-dark);
	--color-grey: var(--color-grey-dark);
}

.dark {
	--color-font: var(--color-light);
	--color-bg: var(--color-dark);
	--color-primary: var(--color-primary-light);
	--color-accent: var(--color-accent-light);

	--color-red: var(--color-red-light);
	--color-orange: var(--color-orange-light);
	--color-yellow: var(--color-yellow-light);
	--color-green: var(--color-green-light);
	--color-blue: var(--color-blue-light);
	--color-purple: var(--color-purple-light);
	--color-grey: var(--color-grey-light);
}

body, h1, h2, h3, h4, h5, h6,
p, blockquote, pre, hr,
dl, dd, ol, ul, figure {
  margin: 0;
  padding: 0;
  color: var(--color-font);
  background-color: var(--color-bg);
}

/* Headings */
h1, h2, h3, h4, h5, h6 {
	margin-bottom: .5rem;
	font-weight: bold;
	line-height: 1.25;
	text-rendering: optimizeLegibility;
	color: var(--color-primary);
}

h1 {
	font-size: 3rem;
}
h2 {
	margin-top: 1rem;
	font-size: 2rem;
	scroll-margin-top: var(--height-header-offset);
}
h3 {
	margin-top: 1.5rem;
	font-size: 1.5rem;
	scroll-margin-top: var(--height-header-offset);
}
h4, h5, h6 {
	margin-top: 1rem;
	font-size: 1rem;
	scroll-margin-top: var(--height-header-offset);
}

h2 a, h3 a, h4 a, h5 a, h6 a {
	font-size: 80%;
}
/* Body */
body {
	font-family: var(--font-family);
}
body img {
	margin: 5px auto auto auto;
	display: block;
	max-width: 800px;
}

p {
	display: block;
	margin-top: 1em;
	margin-bottom: 1em;
	margin-left: 0;
	margin-right: 0;
	line-height: 1.65;
	font-family: var(--font-family);
}

/* Lists */
ul, ol, dl {
	margin-top: 1rem;
	margin-bottom: 1rem;
	margin-left: 1.5rem;
	font-family: var(--font-family);
}

ol li {
	margin-top: 1rem;
	margin-bottom: 1rem;
	margin-left: 1.5rem;
}

li {
	margin-bottom: .5rem;
}

dt {
	font-weight: bold;
}
dd {
	margin-bottom: .5rem;
}

/*
  Links
*/
a {
	color: var(--color-primary);
	border-radius: 5px;
	margin: 0 2px; /* This stops the focus outlining from overlapping surrounding words */
}

@media (hover: hover) {
	a:hover {
		color: var(--color-bg);
		background-color: var(--color-primary);
		text-decoration: none;
		outline: solid var(--color-accent);
		outline-offset: 2px;
	}
}

a:focus {
	color: var(--color-bg);
	background-color: var(--color-primary);
	text-decoration: none;
	outline: solid var(--color-accent);
	outline-offset: 2px;
}

/* Buttons */
button {
	color: var(--color-accent);
	background-color: var(--color-bg);
}

@media (hover: hover) {
	button:hover {
		color: var(--color-bg);
		background-color: var(--color-accent);
		outline: solid var(--color-primary);
		outline-offset: 2px;
	}
}

button:focus {
	color: var(--color-bg);
	background-color: var(--color-accent);
	outline: solid var(--color-primary);
	outline-offset: 2px;
}


/*
Blockquote
*/

blockquote {
	margin: 10px 20px 10px;
	padding: 0px 15px;
	border-left: 0.25em solid var(--color-primary);
	color: var(--color-bg);
	line-height: 1.5;
}

/**
* Tables
*/
table {
	border-collapse: collapse;
	margin-bottom: 30px;
	width: 100%;
}

table, th, td {
	border: 1px solid var(--color-font);
}
th, td {
	padding: 15px;
	text-align: left;
}

/*
Site container
*/

.container {
	width: 95vw;
	height: 100vh;
	margin: auto;
}
.content-wrapper {
	position: relative;
	top: var(--height-header-offset);
	margin: auto;
	display: block;
	width: 95vw;
}

@media (min-width: 1200px) {
	.content-wrapper {
		width: 65vw;
	}
}
.content-wrapper h1 {
	margin: 20px 0px 20px;
}

